--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,7 @@
         "env.bak{,/**}",
         "venv.bak{,/**}",
         ".vscode{,/**}"
-    ]
+    ],
+    "appService.defaultWebAppToDeploy": "/subscriptions/d320a696-6b9b-4284-8a05-3119de91ca33/resourceGroups/dev-bat/providers/Microsoft.Web/sites/dev-pethfinder",
+    "appService.deploySubpath": "."
 }
