--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,19 @@ tensorflow==2.16.1
 flasgger==0.9.7.1
 scikit-learn==1.2.2
 chardet
+
+#yolov5
+gitpython>=3.1.30
+matplotlib>=3.3
+opencv-python>=4.1.1
+psutil
+PyYAML>=5.3.1
+requests>=2.23.0
+scipy>=1.4.1
+thop>=0.1.1
+torch>=1.8.0
+torchvision>=0.9.0
+tqdm>=4.64.0
+ultralytics>=8.0.232
+pandas>=1.1.4
+seaborn>=0.11.0
