--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
+-f https://download.pytorch.org/whl/cpu
 #python 3.10.0
+pip
+setuptools
 Flask==3.0.2
 Pillow==10.3.0
 numpy==1.23.5
@@ -8,17 +11,14 @@ scikit-learn==1.2.2
 chardet
 
 #yolov5
+opencv-python
+torch==1.9.1+cpu -f https://download.pytorch.org/whl/cpu
+torchvision>=0.9.0+cpu
 gitpython>=3.1.30
-matplotlib>=3.3
-opencv-python>=4.1.1
-psutil
+psutil  # system resources
 PyYAML>=5.3.1
 requests>=2.23.0
 scipy>=1.4.1
-thop>=0.1.1
-torch>=1.8.0
-torchvision>=0.9.0
+thop>=0.1.1  # FLOPs computation
 tqdm>=4.64.0
 ultralytics>=8.0.232
-pandas>=1.1.4
-seaborn>=0.11.0
